[tool.poetry]
name = "cipher_qh2231"
version = "0.1.0"
description = "A python package that helps you to encrypt and decrypt in Ceasar's way!"
authors = ["Qinyue Hao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
