[tool.poetry]
name = "cipher_qh2231"
version = "0.1.0"
description = "A python package that helps you to encrypt and decrypt in Ceasar's way!"
authors = ["Qinyue Hao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
